--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -1,18 +1,42 @@
+* {
+    background-color: #3072ec;
+    color: cornsilk;
+    font-family: 'Solway', serif;
+}
+
 label {
     text-align: left;
-    font: times;
+    font-weight: 900;
+
+}
+
+input {
+    text-align: right;
+    background-color: darkblue;
+    width: 300px;
+    height: 30px;
+    font-size: 30px;
+    
+
   }
 
-  input {
-    text-align: right;
-  }
+
+
+input:hover {
+	background-color: darkblue;
+    border-bottom: 1px solid black ;
+    color: white;
+}
 
 .button {
-background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+  background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
   border: 0;
-  border-radius: 3;
+  border-radius: 3px;
   box-shadow: 0 3px 5px 2px rgba(255, 105, 135, .3);
   color:white;
-  height: 48;
+  height: 28px;
   padding: 0 30px;
+  text-align: center;
+  font-size: 20px;
+
 }
